--- a/src/app/address/address.component.html
+++ b/src/app/address/address.component.html
@@ -35,7 +35,7 @@
                 <p> <span class="userElement"> Lat Long: </span>   {{ user.latLong }} </p>
                 </mat-card-content>
                 <mat-card-actions align="end">
-                    <button mat-raised-button color="primary" >EDIT</button>
+                    <button mat-raised-button color="primary" (click)="onEdit(user.id)">EDIT</button>
                 <!-- <button mat-button>SHARE</button> -->
                 </mat-card-actions>
             </mat-card>
